# dndata

./: externalitiesincorporated.py  nb.ipynb  pyproject.toml  sim.py
data/: viz.py
entity/: PARTIES.py  __init__.py
rules/: __init__.py
scheduler/: __init__.py
simulator/: attack.py  dist.py  dmg.py  giffy.py
