[tool.poetry]
name = "dndata"
version = "0.1.0"
description = ""
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "~3.9"
seaborn = "^0.11.1"
pandas = "^1.2.3"
toml = "^0.10.2"
aurflux = "^3.3.17"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
